SERVER-27864 Handle $cmd commands embedded in the query field properly in SCCC